--- a/main.css
+++ b/main.css
@@ -52,3 +52,10 @@
       flex-wrap: wrap;                   /* Allow the items to wrap */
     }
   }
+
+  .footer {
+    background-color: rgb(55, 53, 53);
+    padding: 0.3em;
+    text-align: center;
+    list-style-type: none;
+  }
