--- a/main.css
+++ b/main.css
@@ -1,3 +1,10 @@
+html, body {
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+
 /* Style the header container with a background color */
 .navigation {
     display: flex;                      /* Align items horizontally */
