--- a/cart.css
+++ b/cart.css
@@ -12,6 +12,7 @@ html, body {
     padding: 0.3em;                      /* Add padding around the content */
     background-color: rgb(55, 53, 53);  /* Set the background color */
     color: white;                       /* Text color for better contrast */
+    height: 50px;
     
   }
   
@@ -32,14 +33,15 @@ html, body {
     display: flex;                      /* Flexbox for horizontal alignment */
     gap: 30px;                          /* Space evenly between the list items */
     padding-top: 7px;
-  }
+    }
   
   /* Style individual links */
   nav ul li a {
     text-decoration: none;              /* Remove underline from links */
     color: white;                       /* White text color for contrast */
     font-weight: bold;                  /* Make the links bold */
-    font-size: large;
+    font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+    font-size: medium;
     padding: 10px 15px;                 /* Add padding inside each link for spacing */
     transition: background-color 0.3s;  /* Smooth transition on hover */
   }
