--- a/billing.css
+++ b/billing.css
@@ -10,7 +10,7 @@ html, body {
   justify-content: space-between;
   align-items: center;
   padding: 10px 20px;
-  background-color: rgb(55, 53, 53); /* Dark background */
+  background-color: rgb(55, 53, 53); 
   color: white;
   flex-wrap: wrap;
 }
