--- a/src/login/LoginForm.css
+++ b/src/login/LoginForm.css
@@ -56,7 +56,7 @@
     font-size: 16px;
 }
 
-.login_only .remember-forgot {
+/* .login_only .remember-forgot {
     display: flex;
     justify-content: space-between;
     font-size: 14.5px;
@@ -75,7 +75,7 @@
 
 .remember-forgot a:hover {
     text-decoration: underline;
-}
+} */
 
 .login_only button {
     width: 100%;
